@@ -659,6 +659,11 @@
   "block.valoria.cut_umbral_block": "Cut Umbral Block",
   "block.valoria.sarcophagus": "Sarcophagus",
   "block.valoria.tomb": "Tomb",
+  "block.valoria.mossy_tomb": "Mossy Tomb",
+  "block.valoria.wooden_tomb": "Wooden Tomb",
+  "block.valoria.mossy_wooden_tomb": "Mossy Wooden Tomb",
+  "block.valoria.grave": "Grave",
+  "block.valoria.crypt_lantern": "Crypt Lantern",
   "block.valoria.suspicious_tombstone": "Suspicious Tombstone",
   "block.valoria.cobbled_shale": "Cobbled Shale",
   "block.valoria.cobbled_shale_stairs": "Cobbled Shale Stairs",
