@@ -1,0 +1,228 @@
+{
+	"credit": "Made with Blockbench",
+	"texture_size": [32, 32],
+	"textures": {
+		"1": "valoria:block/crypt_lantern",
+        "particle": "valoria:block/tombstone"
+    },
+	"elements": [
+		{
+			"from": [3.9, -0.1, 3.9],
+			"to": [12.1, 2.1, 12.1],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [11, 9.5, 15, 10.5], "texture": "#1"},
+				"east": {"uv": [11, 10.5, 15, 11.5], "texture": "#1"},
+				"south": {"uv": [11, 11.5, 15, 12.5], "texture": "#1"},
+				"west": {"uv": [12, 2.5, 16, 3.5], "texture": "#1"},
+				"up": {"uv": [4, 4, 0, 0], "texture": "#1"},
+				"down": {"uv": [4, 4, 0, 8], "texture": "#1"}
+			}
+		},
+		{
+			"from": [9, 6, 2],
+			"to": [14, 8, 7.25],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [8, 7, 10.5, 8], "texture": "#1"},
+				"east": {"uv": [0, 13.5, 2.5, 14.5], "texture": "#1"},
+				"south": {"uv": [13.5, 0, 16, 1], "texture": "#1"},
+				"west": {"uv": [13.5, 1, 16, 2], "texture": "#1"},
+				"up": {"uv": [8.5, 12.5, 6, 10], "texture": "#1"},
+				"down": {"uv": [11, 10, 8.5, 12.5], "texture": "#1"}
+			}
+		},
+		{
+			"from": [2, 6, 2],
+			"to": [7, 8, 7.25],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [0, 13.5, 2.5, 14.5], "texture": "#1"},
+				"east": {"uv": [13.5, 6.5, 16, 7.5], "texture": "#1"},
+				"south": {"uv": [13.5, 0, 16, 1], "texture": "#1"},
+				"west": {"uv": [13.5, 7.5, 16, 8.5], "texture": "#1"},
+				"up": {"uv": [2.5, 13.5, 0, 11], "texture": "#1"},
+				"down": {"uv": [11, 10, 8.5, 12.5], "texture": "#1"}
+			}
+		},
+		{
+			"from": [2, 6, 8.75],
+			"to": [7, 8, 14],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [13.5, 8.5, 16, 9.5], "texture": "#1"},
+				"east": {"uv": [13.5, 6.5, 16, 7.5], "texture": "#1"},
+				"south": {"uv": [8, 7, 10.5, 8], "texture": "#1"},
+				"west": {"uv": [13.5, 1, 16, 2], "texture": "#1"},
+				"up": {"uv": [13.5, 2.5, 11, 0], "texture": "#1"},
+				"down": {"uv": [11, 10, 8.5, 12.5], "texture": "#1"}
+			}
+		},
+		{
+			"from": [9, 6, 8.75],
+			"to": [14, 8, 14],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [13.5, 8.5, 16, 9.5], "texture": "#1"},
+				"east": {"uv": [8, 7, 10.5, 8], "texture": "#1"},
+				"south": {"uv": [0, 13.5, 2.5, 14.5], "texture": "#1"},
+				"west": {"uv": [13.5, 1, 16, 2], "texture": "#1"},
+				"up": {"uv": [13.5, 9.5, 11, 7], "texture": "#1"},
+				"down": {"uv": [11, 10, 8.5, 12.5], "texture": "#1"}
+			}
+		},
+		{
+			"from": [4, 7, 4],
+			"to": [12, 11, 12],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [3, 8, 7, 10], "texture": "#1"},
+				"east": {"uv": [8, 3, 12, 5], "texture": "#1"},
+				"south": {"uv": [8, 5, 12, 7], "texture": "#1"},
+				"west": {"uv": [7, 8, 11, 10], "texture": "#1"},
+				"up": {"uv": [8, 4, 4, 0], "texture": "#1"},
+				"down": {"uv": [8, 4, 4, 8], "texture": "#1"}
+			}
+		},
+		{
+			"from": [5, 2, 5],
+			"to": [11, 7, 11],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [3, 10, 6, 12.5], "texture": "#1"},
+				"east": {"uv": [3, 10, 6, 12.5], "texture": "#1"},
+				"south": {"uv": [3, 10, 6, 12.5], "texture": "#1"},
+				"west": {"uv": [3, 10, 6, 12.5], "texture": "#1"},
+				"up": {"uv": [3, 11, 0, 8], "texture": "#1"},
+				"down": {"uv": [11, 0, 8, 3], "texture": "#1"}
+			}
+		},
+		{
+			"from": [6.5, 11, 8],
+			"to": [9.5, 13, 8],
+			"shade": false,
+			"rotation": {"angle": 45, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [5.5, 14, 7, 15], "texture": "#1"},
+				"south": {"uv": [7, 14, 8.5, 15], "texture": "#1"}
+			}
+		},
+		{
+			"from": [8, 11, 6.5],
+			"to": [8, 13, 9.5],
+			"shade": false,
+			"rotation": {"angle": 45, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"east": {"uv": [5.5, 14, 7, 15], "texture": "#1"},
+				"west": {"uv": [7, 14, 8.5, 15], "texture": "#1"}
+			}
+		},
+		{
+			"from": [6, 0, 2],
+			"to": [10, 3, 5],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [12, 3.5, 14, 5], "texture": "#1"},
+				"east": {"uv": [2.5, 14, 4, 15.5], "texture": "#1"},
+				"south": {"uv": [12, 5, 14, 6.5], "texture": "#1"},
+				"west": {"uv": [14, 3.5, 15.5, 5], "texture": "#1"},
+				"up": {"uv": [4.5, 14, 2.5, 12.5], "texture": "#1"},
+				"down": {"uv": [6.5, 12.5, 4.5, 14], "texture": "#1"}
+			}
+		},
+		{
+			"from": [6, 0, 11],
+			"to": [10, 3, 14],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [6.5, 12.5, 8.5, 14], "texture": "#1"},
+				"east": {"uv": [4, 14, 5.5, 15.5], "texture": "#1"},
+				"south": {"uv": [8.5, 12.5, 10.5, 14], "texture": "#1"},
+				"west": {"uv": [14, 5, 15.5, 6.5], "texture": "#1"},
+				"up": {"uv": [12.5, 14, 10.5, 12.5], "texture": "#1"},
+				"down": {"uv": [14.5, 12.5, 12.5, 14], "texture": "#1"}
+			}
+		},
+		{
+			"from": [2, 0, 6],
+			"to": [5, 3, 10],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [2.5, 14, 4, 15.5], "texture": "#1"},
+				"east": {"uv": [12, 5, 14, 6.5], "texture": "#1"},
+				"south": {"uv": [14, 3.5, 15.5, 5], "texture": "#1"},
+				"west": {"uv": [12, 3.5, 14, 5], "texture": "#1"},
+				"up": {"uv": [4.5, 14, 2.5, 12.5], "texture": "#1"},
+				"down": {"uv": [6.5, 12.5, 4.5, 14], "texture": "#1"}
+			}
+		},
+		{
+			"from": [11, 0, 6],
+			"to": [14, 3, 10],
+			"rotation": {"angle": 0, "axis": "y", "origin": [8, 6.5, 8]},
+			"faces": {
+				"north": {"uv": [4, 14, 5.5, 15.5], "texture": "#1"},
+				"east": {"uv": [8.5, 12.5, 10.5, 14], "texture": "#1"},
+				"south": {"uv": [14, 5, 15.5, 6.5], "texture": "#1"},
+				"west": {"uv": [6.5, 12.5, 8.5, 14], "texture": "#1"},
+				"up": {"uv": [12.5, 14, 10.5, 12.5], "texture": "#1"},
+				"down": {"uv": [14.5, 12.5, 12.5, 14], "texture": "#1"}
+			}
+		}
+	],
+	"display": {
+		"thirdperson_righthand": {
+			"rotation": [75, 45, 0],
+			"translation": [0, 2.5, 0],
+			"scale": [0.375, 0.375, 0.375]
+		},
+		"thirdperson_lefthand": {
+			"rotation": [75, 45, 0],
+			"translation": [0, 2.5, 0],
+			"scale": [0.375, 0.375, 0.375]
+		},
+		"firstperson_righthand": {
+			"rotation": [0, 45, 0],
+			"scale": [0.4, 0.4, 0.4]
+		},
+		"firstperson_lefthand": {
+			"rotation": [0, 225, 0],
+			"scale": [0.4, 0.4, 0.4]
+		},
+		"ground": {
+			"translation": [0, 3, 0],
+			"scale": [0.25, 0.25, 0.25]
+		},
+		"gui": {
+			"rotation": [30, 225, 0],
+			"scale": [0.625, 0.625, 0.625]
+		},
+		"fixed": {
+			"scale": [0.5, 0.5, 0.5]
+		}
+	},
+	"groups": [
+		{
+			"name": "group",
+			"origin": [8, 8, 8],
+			"color": 0,
+			"children": [
+				0,
+				1,
+				2,
+				3,
+				4,
+				5,
+				6,
+				7,
+				8,
+				{
+					"name": "sides",
+					"origin": [8, 8, 8],
+					"color": 0,
+					"children": [9, 10, 11, 12]
+				}
+			]
+		}
+	]
+}
