@@ -148,7 +148,10 @@
     "valoria:sarcophagus",
     "valoria:geodite_stone",
     "valoria:stone_crusher",
+    "valoria:grave",
+    "valoria:crypt_lantern",
     "valoria:tomb",
+    "valoria:mossy_tomb",
     "valoria:quartz_blackstone_tile",
     "valoria:elemental_manipulator",
     "valoria:elegant_pedestal",
